--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@ canvas{
 #particles-js{
   width: 100%;
   height: 100%;
-  background-color: #1f3862;
+  background-color: #545454;
   background-image: url('logo.png');
   background-position: top;
   background-repeat: no-repeat;
