--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,14 +8,33 @@
 */
 
 /* Reset */
+	.circle{
+		border-radius: 50%;
+    max-width: 100%;
+    width: auto;
+	}
+
+	.left{
+		float: left;
+		width: 25%;
+		/* overflow: hidden; */
+		/* border-radius: 200px; */
+	}
+	
+	.right{
+		float: right;
+		/* left: 0; */
+		width: 65%;
+		text-align: left;
+	}
 
     .clients{
 		text-align: center;
-		
+		overflow:  auto;
 	}
 	
 	.clients p {
-		text-align: center;
+		text-align: left;
 	}
 
 	html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
@@ -2989,6 +3008,20 @@
 
 			.pagination .page, .pagination .extra {
 				display: none;
+			}
+			.left{
+				width: 150px;
+				margin: 0 auto 20px auto;
+				float: none;
+			}
+			.right{
+				width: 100%;
+				margin: 0 auto 20px auto;
+				float: none;
+				text-align: center;
+			}
+			.right p{
+				text-align: center;
 			}
 
 		}
